--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+.navbar {
+  background-color: #fdf6ea !important;
+}
+
+.navbar-brand {
+  font-size: 3rem;
+}
+
+h1 {
+  color: red;
+}
