--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  Show list of articles
+  Show list of articles by
 </h1>
 
 <% if @articles.empty? %>
@@ -9,6 +9,7 @@
   <thead>
     <th>Title</th>
     <th>Description</th>
+    <th>User</th>
     <th colspan="3">Actions</th>
   </thead>
   <tbody>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= article.title %></td>
         <td><%= article.description %></td>
+        <td><%= article.user.username if article.user %></td>
          <td>
           <%= link_to "Show", article_path(article) %>
         </td>
