--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,6 +18,6 @@
     <%= f.label :password %>
     <%= f.password_field :password %>
   </p>
-  <%= f.submit %>
+  <%= f.submit(@user.new_record? "Sign up" : "Update account") %>
 <% end %>
 
