--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -14,7 +14,9 @@
       <tr>
         <td><%= article.title %></td>
         <td><%= article.description %></td>
-        <td><%= article.user.username if article.user %></td>
+        <% if article.user %>
+          <td><%= link_to article.user.username, user_path(article.user) %></td>
+        <% end %>
          <td>
           <%= link_to "Show", article_path(article) %>
         </td>
