--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,8 @@
 
 <%= gravatar_for @user, size: 100 %>
 
+<div class="text-center mt-4">
+  <%= link_to "Edit your profile", edit_user_path(@user) %>
+</div>
+
 <%= render "articles/article" %>
