--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -11,7 +11,6 @@
   </thead>
   <tbody>
     <% @articles.each do |article| %>
-      <tr>
         <td><%= article.title %></td>
         <td><%= article.description %></td>
         <% if article.user %>
@@ -20,12 +19,17 @@
          <td>
           <%= link_to "Show", article_path(article) %>
         </td>
-        <td>
-          <%= link_to "Edit", edit_article_path(article)  %>
-        </td>
-        <td>
-          <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" } %>
-        </td>
+
+        <% if logged_in? && article.user == current_user %>
+          <td>
+            <%= link_to "Edit", edit_article_path(article)  %>
+          </td>
+        <% end %>
+         <% if logged_in? && article.user == current_user %>
+          <td>
+            <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" } %>
+          </td>
+           <% end %>
       </tr>
     <% end %> 
 </table>
