--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,5 +5,8 @@
   <li>user: <%= @article.user.username if @article.user %>
 </ul>
 
-<%= link_to "Edit", edit_article_path(@article) %> | <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" } %> | 
-<%= link_to "Return to article listing", articles_path %>
+<% if logged_in? && @article.user == current_user %>
+
+  <%= link_to "Edit", edit_article_path(@article) %> | <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" } %> | 
+  <%= link_to "Return to article listing", articles_path %>
+  <% end %>
