--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,9 +17,12 @@
          <td>
           <%= link_to "View profile", user_path(user) %>
         </td>
-        <td>
-          <%= link_to "Edit", edit_user_path(user)  %>
-        </td>
+        <% if logged_in? && user == current_user %>
+          <td>
+            <%= link_to "Delete", user_path(current_user), method: :delete, data: { confirm: "Are you sure? "} %>
+            <%= link_to "Edit", edit_user_path(user)  %>
+          </td>
+        <% end %>
       </tr>
     <% end %> 
   </table>
