--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,11 @@
 
 <%= gravatar_for @user, size: 100 %>
 
-<div class="text-center mt-4">
-  <%= link_to "Edit your profile", edit_user_path(@user) %>
-</div>
+<% if logged_in? && @user == current_user %>
+
+  <div class="text-center mt-4">
+    <%= link_to "Edit your profile", edit_user_path(@user) %>
+  </div>
+<% end %>
 
 <%= render "articles/article" %>
