add category pagination

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,8 +1,10 @@
 <% if @category.errors.any? %> 
-  <h1>The following errors have prevented the category from being saved</h1>
-  <% @category.errors.full_messages.each do |msg| %>
-    <p><%= msg %></p>
-  <% end %>
+   <div class="alert alert-danger alert-dismissible fade show" role="alert">
+  <h4 class="alert-heading">The following errors prevented the <%= @category.class.name.downcase %> from being saved</h4>
+    <% @category.errors.full_messages.each do |msg| %>
+      <p><%= msg %></p>
+    <% end %>
+    </div>
 <% end  %>
 
 <%= form_with(model: @category, local: true) do |f| %>
