add  category view

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,11 +2,13 @@
 <ul>
   <li>title: <%= @article.title %></li>
   <li>description: <%= @article.description %></li>
+  <% if @article.categories.any? %>
+    <%= render @article.categories %>
+  <% end %>
   <li>user: <%= @article.user.username if @article.user %>
 </ul>
 
 <% if logged_in? && @article.user == current_user %>
-
   <%= link_to "Edit", edit_article_path(@article) %> | <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" } %> | 
   <%= link_to "Return to article listing", articles_path %>
-  <% end %>
+<% end %>
