--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -14,6 +14,9 @@
     <%= f.label :description %>
     <%= f.text_area :description %>
   </p>
+  <p>
+    <%= f.collection_select(:category_ids, Category.all, :id, :name, { prompt: "Make your selection from the list below" }, { multiple: true, size: 3, class: "custom-select shadow rounded" }) %>
+  </p>
   <%= f.submit %>
 <% end %>
 
